{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 33,
  "lineage": "c8a5bec4-c44f-012e-5b65-c591def276b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e7b2e50e24dd464",
            "arn": "arn:aws:ec2:ca-central-1:251132308531:elastic-ip/eipalloc-02e7b2e50e24dd464",
            "domain": "vpc",
            "id": "eipalloc-02e7b2e50e24dd464",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-35-182-85-248.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.85.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-eip-1",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-eip-1",
              "Project": "SilentCanary"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fa4189c64d9a3dc",
            "arn": "arn:aws:ec2:ca-central-1:251132308531:elastic-ip/eipalloc-05fa4189c64d9a3dc",
            "domain": "vpc",
            "id": "eipalloc-05fa4189c64d9a3dc",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-35-182-105-212.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.105.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-eip-2",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-eip-2",
              "Project": "SilentCanary"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:internet-gateway/igw-0ca2bd25b40266264",
            "id": "igw-0ca2bd25b40266264",
            "owner_id": "251132308531",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-igw",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-igw",
              "Project": "SilentCanary"
            },
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e7b2e50e24dd464",
            "association_id": "eipassoc-0f0d4f24a5233fc05",
            "connectivity_type": "public",
            "id": "nat-06cd47c359dead5f3",
            "network_interface_id": "eni-04bd7e3bd8417d48d",
            "private_ip": "10.0.1.250",
            "public_ip": "35.182.85.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f23db15429d48a9a",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-1",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-1",
              "Project": "SilentCanary"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fa4189c64d9a3dc",
            "association_id": "eipassoc-05c46fb01d908bb9d",
            "connectivity_type": "public",
            "id": "nat-05fa5f47758c16863",
            "network_interface_id": "eni-08e8b7ac4483e047b",
            "private_ip": "10.0.2.128",
            "public_ip": "35.182.105.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035563fe03032556d",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-2",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-nat-2",
              "Project": "SilentCanary"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:route-table/rtb-0ee4f81d2a4ec5baf",
            "id": "rtb-0ee4f81d2a4ec5baf",
            "owner_id": "251132308531",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06cd47c359dead5f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-rt-1",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-rt-1",
              "Project": "SilentCanary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:route-table/rtb-0b2303e9238d39e64",
            "id": "rtb-0b2303e9238d39e64",
            "owner_id": "251132308531",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05fa5f47758c16863",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-rt-2",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-rt-2",
              "Project": "SilentCanary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:route-table/rtb-0dd4ff943e8722f05",
            "id": "rtb-0dd4ff943e8722f05",
            "owner_id": "251132308531",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca2bd25b40266264",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-public-rt",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-public-rt",
              "Project": "SilentCanary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083dbd6bb8d1efd12",
            "route_table_id": "rtb-0ee4f81d2a4ec5baf",
            "subnet_id": "subnet-09e2b826ecb78c146"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd9d31a683ce3bc0",
            "route_table_id": "rtb-0b2303e9238d39e64",
            "subnet_id": "subnet-0fda97c1f007ff5d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea13d6ab43c718b4",
            "route_table_id": "rtb-0dd4ff943e8722f05",
            "subnet_id": "subnet-0f23db15429d48a9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e85ddbae2aa37b5e",
            "route_table_id": "rtb-0dd4ff943e8722f05",
            "subnet_id": "subnet-035563fe03032556d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:security-group/sg-0c2ab996a1320ea59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2ab996a1320ea59",
            "ingress": [],
            "name": "silentcanary-cluster-cluster-sg20250830164213339800000005",
            "name_prefix": "silentcanary-cluster-cluster-sg",
            "owner_id": "251132308531",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-cluster-sg",
              "Project": "SilentCanary"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-cluster-sg",
              "Project": "SilentCanary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_workstation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2823779163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c2ab996a1320ea59",
            "security_group_rule_id": "sgr-0adebbb4e1bf1b878",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:subnet/subnet-09e2b826ecb78c146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e2b826ecb78c146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251132308531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-1",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-1",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:subnet/subnet-0fda97c1f007ff5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda97c1f007ff5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251132308531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-2",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-private-2",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:subnet/subnet-0f23db15429d48a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f23db15429d48a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251132308531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-public-1",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-public-1",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:subnet/subnet-035563fe03032556d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035563fe03032556d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251132308531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-public-2",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-public-2",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0449d865b5ea0e1fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:251132308531:vpc/vpc-0449d865b5ea0e1fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b6a647942ed1023",
            "default_route_table_id": "rtb-06096ff81c87f62f6",
            "default_security_group_id": "sg-07a0fd30777c68f2c",
            "dhcp_options_id": "dopt-0725c27608b6b35a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0449d865b5ea0e1fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06096ff81c87f62f6",
            "owner_id": "251132308531",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-vpc",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "shared"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "production",
              "Name": "silentcanary-cluster-vpc",
              "Project": "SilentCanary",
              "kubernetes.io/cluster/silentcanary-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}